// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reboot component should render correctly 1`] = `
<span
  className="ins-c-reboot"
>
  <RebootingIcon
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
    title={null}
  />
  <span>
    Reboot Required
  </span>
</span>
`;

exports[`Reboot component should render correctly with red 1`] = `
<span
  className="ins-c-reboot ins-m-red"
>
  <RebootingIcon
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
    title={null}
  />
  <span>
    Reboot Required
  </span>
</span>
`;
